🔥Fixing the story hint z-index. (#17214)

--- a/extensions/amp-story/0.1/amp-story-hint.css
+++ b/extensions/amp-story/0.1/amp-story-hint.css
@@ -24,6 +24,7 @@
   top: 0 !important;
   right: 0 !important;
   bottom: 0 !important;
+  z-index: 2 !important;
 }
 
 .i-amphtml-story-hint-container.i-amphtml-hidden {
